--- a/BondsRecommendor.csproj
+++ b/BondsRecommendor.csproj
@@ -32,9 +32,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -57,11 +54,17 @@
     <Compile Include="BackEnd\WebController.cs" />
     <Compile Include="Bridge\BridgeToBackEnd.cs" />
     <Compile Include="Bridge\MessagesFromBackEnd.cs" />
-    <Compile Include="FrontEnd\DownloadSettings.cs">
+    <Compile Include="FrontEnd\BuyBondDlg.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FrontEnd\DownloadSettings.Designer.cs">
-      <DependentUpon>DownloadSettings.cs</DependentUpon>
+    <Compile Include="FrontEnd\BuyBondDlg.Designer.cs">
+      <DependentUpon>BuyBondDlg.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrontEnd\DownloadSettingsDlg.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrontEnd\DownloadSettingsDlg.Designer.cs">
+      <DependentUpon>DownloadSettingsDlg.cs</DependentUpon>
     </Compile>
     <Compile Include="FrontEnd\MainForm.cs">
       <SubType>Form</SubType>
@@ -75,17 +78,29 @@
     <Compile Include="FrontEnd\OpenNewPortfolio.Designer.cs">
       <DependentUpon>OpenNewPortfolio.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrontEnd\SellBondDlg.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrontEnd\SellBondDlg.Designer.cs">
+      <DependentUpon>SellBondDlg.cs</DependentUpon>
+    </Compile>
     <Compile Include="GeneralTypes\GeneralTypes.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="FrontEnd\DownloadSettings.resx">
-      <DependentUpon>DownloadSettings.cs</DependentUpon>
+    <EmbeddedResource Include="FrontEnd\BuyBondDlg.resx">
+      <DependentUpon>BuyBondDlg.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrontEnd\DownloadSettingsDlg.resx">
+      <DependentUpon>DownloadSettingsDlg.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrontEnd\MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrontEnd\OpenNewPortfolio.resx">
       <DependentUpon>OpenNewPortfolio.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrontEnd\SellBondDlg.resx">
+      <DependentUpon>SellBondDlg.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -96,7 +111,6 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
